# Enterprise-Multi-Agent-Copilot

./: .gitignore  README.md  main.py  pyproject.toml
app/: streamlit_app.py
app/assets/: Components.py  UI.py
chroma/: chroma.sqlite3
data/: README.md
eval/: run_eval.py
eval/test_prompts/: test_prompt.jsonl  test_prompts.jsonl
graph/: consts.py  graph_flow.py  state.py
graph/agents/: AGENT_Planner.py  AGENT_Research.py  AGENT_Verifier.py  AGENT_Writer.py  research_agent.py
graph/chains/: chunk_grader.py
graph/nodes/: Node_Planner.py  Node_Research.py  Node_Verifier.py  Node_Writer.py  __init__.py  research_node.py
graph/utils/: tracing.py
retrival/: doc_retriver.py  ingestion.py
tests/: test_agents.py
