[project]
name = "multi-agent-jon-ibrani"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "chromadb>=1.5.0",
    "isort>=7.0.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "pdfplumber>=0.11.9",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
]
